test/tests/errors/error-array-access-out-of-bounds.sm
// true
// false
/**/
/**/

program {
    array x[0:4];
    x[-1] = 1;
}